--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#">Sign Up</a>
                 <a href="#">Log In</a>
                 <i class="fas fa-search"></i>
-                <i class="fas fa-shopping-cart"></i>
+                <i class="fas fa-shopping-cart cart-circle"></i>
             </div>
             <i class="fas fa-shopping-cart" id="cart-mobile"></i>
         </nav>
@@ -34,7 +34,7 @@
                 <h1>Start your Journey as <br> Influencer</h1>
                 <p>Taking things one day at a time can help relieve anxiety and build the courage to become more
                     camera confident.</p>
-                <button class="btn">Preebook now <i class="fas fa-arrow-right"></i></i></button>
+                <button class="btn">Preebook now <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="banner-img">
                 <img src="images/banner-img.png" alt="">
@@ -70,7 +70,8 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>This lightweight tripod allows you to make photos and videos without having to hold the camera
+                        steady yourself</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/mic.png" alt="">
@@ -85,7 +86,7 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>Best Microphone range in Creative, Logitech, Havit, Boya, & more Microphone in Bangladesh.</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/airpod.png" alt="">
@@ -100,7 +101,7 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>Product details of wireless AirBuds. 100% brand new and best quality product</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/drone.png" alt="">
@@ -115,7 +116,7 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>The big launch of 2021 was the arrival of the DJI FPV Combo which brings sports....</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/lights.png" alt="">
@@ -130,12 +131,12 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>professional Photo Studio Lighting Kit for Portrait Photography, Shooting Video, etc.</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/setup.png" alt="">
                     <h2>Photoshoot set</h2>
-                    <h3>$820.29</h3>
+                    <h3>$1220.29</h3>
                     <div class="ratings">
                         <i class="fas fa-star fill"></i>
                         <i class="fas fa-star fill"></i>
@@ -145,7 +146,8 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>Photography Video Studio Lighting Kit Umbrella Softbox Set Continuous Lighting for Photo Studio
+                    </p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/camera.png" alt="">
@@ -160,26 +162,12 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>The best compact vlogging camera around · 1-inch ; 2. Fujifilm X-S10. A mirrorless all-rounder
+                        that makes perfect sense for vloggers</p>
                 </div>
                 <div class="product">
                     <img class="product-image" src="images/single-light.png" alt="">
                     <h2>Green Screen</h2>
-                    <h3>$250.99</h3>
-                    <div class="ratings">
-                        <i class="fas fa-star fill"></i>
-                        <i class="fas fa-star fill"></i>
-                        <i class="fas fa-star fill"></i>
-                        <i class="fas fa-star fill"></i>
-                        <i class="fas fa-star blank"></i>
-                        <span>4.40</span>
-                    </div>
-                    <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
-                </div>
-                <div class="product">
-                    <img class="product-image" src="images/action.png" alt="">
-                    <h2>Action Camera</h2>
                     <h3>$25.99</h3>
                     <div class="ratings">
                         <i class="fas fa-star fill"></i>
@@ -190,25 +178,54 @@
                         <span>4.40</span>
                     </div>
                     <p>Available</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, voluptas.</p>
+                    <p>Ideal for even the tightest of workspaces, Green Screen guarantees a wrinkle-resistant,
+                        chroma-green surface</p>
                 </div>
+                <div class="product">
+                    <img class="product-image" src="images/action.png" alt="">
+                    <h2>Action Camera</h2>
+                    <h3>$325.99</h3>
+                    <div class="ratings">
+                        <i class="fas fa-star fill"></i>
+                        <i class="fas fa-star fill"></i>
+                        <i class="fas fa-star fill"></i>
+                        <i class="fas fa-star fill"></i>
+                        <i class="fas fa-star blank"></i>
+                        <span>4.40</span>
+                    </div>
+                    <p>Available</p>
+                    <p>An action camera is a portable handheld camera that can shoot high-quality photos and 4K videos.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- Featured Sec -->
+        <div class="featured">
+            <img class="featured-img" src="images/gear.png" alt="">
+            <div class="featured-content">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn">Join Now <i class="fas fa-arrow-right"></i></button>
             </div>
         </div>
     </main>
     <!-- sign up sec -->
     <div class="sign-up">
-        <div class="content">
-            <h2>Inspiration in your inbox</h2>
-            <p>Sign up to receive creative inspiration, product promotions & photo tips</p>
+        <div>
+            <div class="content">
+                <h2>Inspiration in your inbox</h2>
+                <p>Sign up to receive creative inspiration, product promotions & photo tips</p>
+            </div>
+            <form>
+                <input type="text" placeholder="Write Your Email">
+                <button>Sign Up</button>
+            </form>
         </div>
-        <form>
-            <input type="text">
-            <button>Sign Up</button>
-        </form>
     </div>
     <footer>
         <h2>Influencer products</h2>
-        <p>Copyright © 2020 influencer products <br> All rights reserved</p>
+        <p>Copyright &#169; 2020 influencer Products <br> All rights reserved</p>
         <div class="social">
             <i class="fab fa-instagram"></i>
             <i class="fab fa-dribbble"></i>
