--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
 
         <!-- Banner Sec -->
-        <div class="banner">
+        <section class="banner">
             <div class="content">
                 <h1>Start your Journey as <br> Influencer</h1>
                 <p>Taking things one day at a time can help relieve anxiety and build the courage to become more
@@ -39,11 +39,11 @@
             <div class="banner-img">
                 <img src="images/banner-img.png" alt="">
             </div>
-        </div>
+        </section>
     </header>
     <main>
         <!-- Sponsor Sec -->
-        <div class="sponsor">
+        <section class="sponsor">
             <img src="images/logos/Alibaba.svg" alt="">
             <img src="images/logos/Amazon.svg" alt="">
             <img src="images/logos/Daraz.pk Logo.svg" alt="">
@@ -51,10 +51,10 @@
             <img src="images/logos/Rakuten.svg" alt="">
             <img src="images/logos/Target.svg" alt="">
             <img src="images/logos/Walmart.svg" alt="">
-        </div>
+        </section>
 
         <!-- Products sec -->
-        <div class="products">
+        <section class="products">
             <h1>Popular Collection</h1>
             <div class="product-items">
                 <div class="product">
@@ -198,9 +198,11 @@
                     </p>
                 </div>
             </div>
-        </div>
+            <a href="#" class="see-more">See More <i class="fas fa-arrow-right"></i></a>
+        </section>
+
         <!-- Featured Sec -->
-        <div class="featured">
+        <section class="featured">
             <img class="featured-img" src="images/gear.png" alt="">
             <div class="featured-content">
                 <h2>Featured products at one place</h2>
@@ -208,10 +210,10 @@
                     duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 <button class="btn">Join Now <i class="fas fa-arrow-right"></i></button>
             </div>
-        </div>
+        </section>
     </main>
     <!-- sign up sec -->
-    <div class="sign-up">
+    <section class="sign-up">
         <div>
             <div class="content">
                 <h2>Inspiration in your inbox</h2>
@@ -222,7 +224,8 @@
                 <button>Sign Up</button>
             </form>
         </div>
-    </div>
+    </section>
+    <!-- Footer Section -->
     <footer>
         <h2>Influencer products</h2>
         <p>Copyright &#169; 2020 influencer Products <br> All rights reserved</p>
